--- a/CustomHomes/src/main/resources/plugin.yml
+++ b/CustomHomes/src/main/resources/plugin.yml
@@ -3,11 +3,14 @@ version: 1.0.0
 main: me.fliqq.customhomes.CustomHomes
 description: Homes per Ranks
 author: Fliqq
-api-version: "1.21.3"
+api-version: 1.21.1
 commands:
   sethome:
+    description: Sets a home for the player
     usage: /sethome <home>
   home:
+    description: Teleports to a specified home
     usage: /home <home>
   delhome:
+    description: Deletes a home
     usage: /delhome <home>
