--- a/SimpleTAB/src/main/resources/plugin.yml
+++ b/SimpleTAB/src/main/resources/plugin.yml
@@ -1,7 +1,12 @@
 name: SimpleTAB
 version: 1.0.0
 main: me.fliqq.simpletab.SimpleTAB
-description: Dynamic TAB Plugin
+description: Dynamic TAB Plugin Paired With LuckPerms
 author: Fliqq
-api-version: "1.21.3"
+api-version: "1.21.1"
 softdepend: [LuckPerms]
+commands:
+  tabreload:
+    description: Reloads the plugin
+    usage: /tabreload
+    permission: simpletab.reload
